Fix 'change location' icon alignment - Fix 'change location' icon alignment on dealer locator, service center listing page desktop and mobile

--- a/BikeWale.UI/m/css/dealer/listing.css
+++ b/BikeWale.UI/m/css/dealer/listing.css
@@ -9,11 +9,6 @@
     vertical-align: middle;
 }
 
-.dealer-heading {
-	width: 80%;
-	padding-right: 10px;
-}
-
 /* dealer listing */
 #dealersList {
     padding: 0 20px 20px;
@@ -177,11 +172,19 @@
     width: 16px;
     height: 16px;
     background-position: -83px -257px;
+    position: relative;
+    top: 3px;
 }
 
 @media only screen and (max-width: 420px) {
     .change-text {
         display: block
+    }
+    .dealer-heading {
+        width: 80%;
+    }
+    .edit-blue {
+        left: 3px;
     }
 }
 
