--- a/BikeWale.UI/m/sass/service/_listing-style.sass
+++ b/BikeWale.UI/m/sass/service/_listing-style.sass
@@ -23,10 +23,6 @@
 	display: inline-block
 	vertical-align: middle
 
-.dealer-heading
-	width: 80%
-	padding-right: 10px
-
 #center-list
 	padding: 0 20px 20px
 
@@ -100,10 +96,18 @@
 	width: 16px
 	height: 16px
 	background-position: -83px -257px
+	position: relative
+	top: 3px
 
 @media only screen and (max-width: 420px)
 	.change-text
 		display: block
+
+	.dealer-heading
+		width: 80%
+
+	.edit-blue
+		left: 3px
 
 @media only screen and (max-width: 320px)
 	#makeDealersContent .card-container .swiper-slide, #makeDealersContent .card-container .swiper-card
